# PyGUI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  DEVELOPMENT_TOOLS.md  LICENSE  Makefile  README.md  RELEASING.md  TESTING.md  TODO.md  pyproject.toml
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  publish.yml  test.yml
examples/: basic_operations.py  macro_example.py  multi_monitor.py
guiguigui/backend/: __init__.py  base.py  macos.py  wayland.py  win32.py  x11.py
guiguigui/core/: __init__.py  clipboard.py  display.py  errors.py  keyboard.py  mouse.py  window.py
pygui/: __init__.py
pygui/backend/: __init__.py
pygui/core/: __init__.py  clipboard.py  display.py  errors.py  events.py  keyboard.py  macro.py  mouse.py  types.py  window.py
tests/: ca.py  conftest.py  test_basic.py
tests/integration/: test_clipboard_operations.py  test_display_operations.py  test_keyboard_operations.py  test_macos_integration.py  test_mouse_operations.py  test_x11_integration.py
tests/platform/: __init__.py  test_macos_backend.py  test_x11_backend.py
tests/unit/: test_clipboard.py  test_display.py  test_keyboard.py  test_macro.py  test_mouse.py  test_window.py
